--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,8 @@ h1 {
   font-family: 'Lora', serif;
   font-weight: 400;
   color:var(--pink);
-  line-height:1.2
+  line-height:1.2;
+  padding-top: 100px;
 } 
 
 h2 {
@@ -345,6 +346,7 @@ footer.mobile {
 @media (min-width:900px) {
    :root{--container:720px} 
    h1{font-size:34px} 
+   h1{padding-top: 60px}
    .stack{gap:14px} 
   }
 
