--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ h1 {
   color:var(--pink);
   line-height:1.2;
   padding-top: 100px;
+  padding-bottom: 50px;
 } 
 
 h2 {
@@ -347,7 +348,8 @@ footer.mobile {
    :root{--container:720px} 
    h1{font-size:34px} 
    h1{padding-top: 60px}
-   .stack{gap:14px} 
+   h1{padding-bottom: 40px}
+  .stack{gap:14px} 
   }
 
 @media (min-width:1200px) { 
