--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,8 @@ strong {
   font-size: 23px;
   font-weight: 400;
   line-height: 1.2;
+  padding-left: 10px;
+  padding-right: 8px;
 }
 
 .card {
