--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,8 @@ strong {
 footer.mobile {
   padding:18px 0;
   color:var(--darkblue);
-  text-align:center
+  text-align:center;
+  font-size: 20px;
 }
 
 @media (min-width:900px) {
