--- a/css/style.css
+++ b/css/style.css
@@ -303,11 +303,14 @@ strong {
 }
 
 .thumb {
-  width:56px;
-  height:56px;
+  width:60px;
+  height:60px;
   border-radius:50%;
   background: var(--paper);
-  border:1px solid var(--blue)
+  border:1px solid var(--blue);
+  background-size: contain;   
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .input {
